@@ -450,6 +450,7 @@ static void help(void)
 	    "\t-f dir\tRun recovery on data base in dir.\n"
 	    "\t-F dir\tRun catastrophic recovery on data base in dir.\n"
 	    "\t-P dir\tRemove inactive log files in dir.\n"
+	    "\t-C file\tCheck data file.\n"
 	    "\t-d file\tDump data from file to stdout.\n"
 	    "\t-l file\tLoad data from stdin into file.\n"
 	    "\t-u file\tUpgrade wordlist version.\n"
@@ -485,10 +486,10 @@ static const char *ds_file = NULL;
 static bool  prob = false;
 
 typedef enum { M_NONE, M_DUMP, M_LOAD, M_WORD, M_MAINTAIN, M_ROBX, M_HIST,
-    M_RECOVER, M_CRECOVER, M_PURGELOGS } cmd_t;
+    M_RECOVER, M_CRECOVER, M_PURGELOGS, M_VERIFY } cmd_t;
 static cmd_t flag = M_NONE;
 
-#define	OPTIONS	":a:c:d:Df:F:hH:I:k:l:m:np:P:r:R:s:u:vVw:x:X:y:"
+#define	OPTIONS	":a:c:C:d:Df:F:hH:I:k:l:m:np:P:r:R:s:u:vVw:x:X:y:"
 
 static int remenv = 0;	/** if set, run recovery and remove the environment */
 static char *remedir;	/** environment to remove */
@@ -573,7 +574,7 @@ static int process_arglist(int argc, char **argv)
 
     if (count != 1)
     {
-	fprintf(stderr, "%s: Exactly one of the -d, -f, -F, -P, -l, -R or -w flags "
+	fprintf(stderr, "%s: Exactly one of the -C, -d, -f, -F, -P, -l, -R or -w flags "
 		"must be present.\n", progname);
 	exit(EX_ERROR);
     }
@@ -593,6 +594,12 @@ static int process_arg(int option, const char *name, const char *val, int option
     switch (option) {
     case '?':
 	fprintf(stderr, "Unknown option '%s'.\n", name);
+	break;
+
+    case 'C':
+	flag = M_VERIFY;
+	count += 1;
+	ds_file = val;
 	break;
 
     case 'f':
@@ -819,6 +826,9 @@ int main(int argc, char *argv[])
 	    break;
 	case M_PURGELOGS:
 	    rc = ds_purgelogs(ds_file);
+	    break;
+	case M_VERIFY:
+	    rc = ds_verify(ds_file);
 	    break;
 	case M_DUMP:
 	    rc = dump_wordlist(ds_file);
