@@ -244,6 +244,9 @@ extern int ds_recover(const char *directory, bool catastrophic);
 /** Remove environment in given directory, \return EX_OK or EX_ERROR */
 extern int ds_remove(const char *directory);
 
+/** Verify given database */
+extern int ds_verify(const char *file);
+
 /** Remove inactive log files in given directory, \return EX_OK. */
 extern int ds_purgelogs(const char *directory);
 
